--- a/vue_studentmanagement/package.json
+++ b/vue_studentmanagement/package.json
@@ -13,6 +13,7 @@
     "sweetalert2": "^11.3.10",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-carousel": "^0.1.36",
     "vuex": "^4.0.0-0",
     "vuex-persistedstate": "^4.1.0"
   },
